# facerec

./: CMakeLists.txt  README.md  base.cpp  base.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewer.cpp  viewer.h
